# MPRPC

./: CMakeLists.txt
example/: user.proto
example/callee/: CMakeLists.txt  main.cpp  userService.cpp
include/: mprpcApplication.hpp  mprpcCommonFunc.hpp  rpcProvider.hpp
src/: CMakeLists.txt  mprpcApplication.cpp  mprpcCommonFunc.cpp  rpcHeader.pb.cc  rpcHeader.pb.h  rpcHeader.proto  rpcProvider.cpp
